--- a/package.json
+++ b/package.json
@@ -57,8 +57,12 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/yourusername/liminal.git"
   },
+  "bugs": {
+    "url": "https://github.com/yourusername/liminal/issues"
+  },
+  "homepage": "https://github.com/yourusername/liminal#readme",
   "dependencies": {
     "aiblueprint-cli": "^1.1.7",
     "ogl": "^1.0.11"
