--- a/.github/workflows/merge-to-main.yml
+++ b/.github/workflows/merge-to-main.yml
@@ -2,7 +2,7 @@ name: Merge to Main
 
 on:
   push:
-    branches: [develop]
+    branches: [development]
 
 jobs:
   check-ci:
@@ -62,10 +62,10 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Merge develop into main
+      - name: Merge development into main
         run: |
           git checkout main
-          git merge --no-ff develop -m "chore: merge develop into main [skip ci]"
+          git merge --no-ff development -m "chore: merge development into main [skip ci]"
           git push origin main
 
       - name: Create success comment
