--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
+    "test-storybook": "test-storybook",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
@@ -44,16 +45,20 @@
     "@storybook/addon-links": "^9.1.13",
     "@storybook/react-vite": "^9.1.13",
     "@storybook/test": "^9.0.0-alpha.2",
+    "@storybook/test-runner": "^0.23.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
+    "concurrently": "^9.2.1",
+    "http-server": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.72.0",
     "storybook": "^9.1.13",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
-    "vite-plugin-dts": "^3.8.1"
+    "vite-plugin-dts": "^3.8.1",
+    "wait-on": "^9.0.1"
   },
   "repository": {
     "type": "git",
